Make test work on JDK 17 and add note about necessary "--add-opens" when using LoggerFactory.rolloverLogfile()